--- a/src/app/pages/renter/home-service/home-service.component.html
+++ b/src/app/pages/renter/home-service/home-service.component.html
@@ -1,226 +1,61 @@
-<div class="renter-home-service">
-  <div class="div">
-    <!--Đường dẫn-->
-    <div class="overlap">
-      <div class="hp">Homepage</div>
-      <img class="mask-group" src="assets/images/mask-group.png" />
-      <div class="hs">Home Service</div>
-    </div>
+<div class="heading-clean">Fox Clean</div>
+<p class="slogan">Your comfort is our top priority!</p>
 
-    <!--FoxClean-->
-    <div class="heading1">Fox Clean</div>
-    <p class="slogan">Your comfort is our top priority!</p>
+<div>
+  <div class="clean4u">
+    <img src="assets/images/clean4u.jpg" class="frame" />
+    <div class="name">Clean4u - Giúp việc tận nơi</div>
+    <div class="hour">$10/hour</div>
+  </div>
+  <div class="btaskee">
+    <img src="assets/images/btaskee.png" class="frame" />
+    <div class="name">bTaskee</div>
+    <div class="hour">$16/day</div>
+  </div>
+  <div class="jupviec">
+    <img src="assets/images/jupviec.jpg" class="frame" />
+    <div class="name">JupViec.vn</div>
+    <div class="hour">$25/day</div>
+  </div>
+  <div class="pvn">
+    <img src="assets/images/pvn.png" class="frame" />
+    <div class="name">Phụ việc nhanh</div>
+    <div class="hour">$18/day</div>
+  </div>
+</div>
 
-    <!--Clean4u-->
-    <div class="clean4u">
-      <a
-        href="https://ungdungclean4u.wixsite.com/ungdunggiupviecclean?fbclid=IwAR1Cf6N2CUY9fo_xn8DdPSP_EcKZ0X0Q-qgCo0f7ShF-Tuvz2xNRikG0h54"
-        target="_blank"
-      >
-        <div>
-          <img
-            src="assets/images/clean4u.jpg"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="foxclean">
-            <div class="cube-name">Clean4u - Giúp việc tận nơi</div>
-            <div class="cube-star">5 (26)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$10/hour</div>
-        </div>
-      </a>
-    </div>
-    <!--bTaskee-->
-    <div class="btaskee">
-      <a href="https://www.btaskee.com/en/" target="_blank">
-        <div>
-          <img
-            src="assets/images/btaskee.png"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="foxclean">
-            <p class="cube-name">bTaskee</p>
-            <div class="cube-star">5 (42)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$16/day</div>
-        </div>
-      </a>
-    </div>
-    <!--Jupviec-->
-    <div class="jupviec">
-      <a href="https://jupviec.vn/" target="_blank">
-        <div>
-          <img
-            src="assets/images/jupviec.jpg"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="foxclean">
-            <p class="cube-name">JupViec.vn</p>
-            <div class="cube-star">5 (42)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$25/day</div>
-        </div>
-      </a>
-    </div>
-    <!--PVN-->
-    <div class="pvn">
-      <a href="https://phuviecnhanh.vn/" target="_blank">
-        <div>
-          <img
-            src="assets/images/pvn.png"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="foxclean">
-            <p class="cube-name">Phụ việc nhanh</p>
-            <div class="cube-star">5 (42)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$18/day</div>
-        </div>
-      </a>
-    </div>
+<div class="heading-fix">Fox Fix</div>
+<p class="slogan">Your comfort is our top priority!</p>
 
-    <!--FoxFix-->
-    <div class="heading2">Fox Fix</div>
-    <p class="slogan2">Your comfort is our top priority!</p>
+<div class="fixhome">
+  <img src="assets/images/fixhome.jpg" class="frame" />
+  <div class="name">Fixhome</div>
+  <div class="hour">$10/hour</div>
+</div>
+<div class="nhaxanh">
+  <img src="assets/images/nhaxanh.jpg" class="frame" />
+  <div class="name">Nhà Xanh</div>
+  <div class="hour">$15/day</div>
+</div>
+<div class="masterhome">
+  <img src="assets/images/masterhome.jpg" class="frame" />
+  <div class="name">Masterhome - Furniture & Decor</div>
+  <div class="hour">$15/day</div>
+</div>
 
-    <!--Fixhome-->
-    <div class="fixhome">
-      <a
-        href="https://www.facebook.com/fixhomevietnam/?locale=hi_IN"
-        target="_blank"
-      >
-        <div>
-          <img
-            src="assets/images/fixhome.jpg"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="overlap-group-2">
-            <div class="cube-name">Fixhome</div>
-            <div class="cube-star">5 (58)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$10/hour</div>
-        </div>
-      </a>
-    </div>
-    <!--Nhaxanh-->
-    <div class="nhaxanh">
-      <a href="https://nhaxanhvietnam.com.vn/" target="_blank">
-        <div>
-          <img
-            src="assets/images/nhaxanh.jpg"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="overlap-group-2">
-            <p class="cube-name">Nhà Xanh</p>
-            <div class="cube-star">4 (30)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$15/day</div>
-        </div>
-      </a>
-    </div>
-    <!--Masterhome-->
-    <div class="masterhome">
-      <a
-        href="https://www.facebook.com/masterhome.noithat/?paipv=0&eav=AfYDM8l4IEu6Zl8elNoK013l-8JOyteyviRqt--69ZVPX050MaeTRGzhhjPw30bT7Ds&_rdr"
-        target="_blank"
-      >
-        <div>
-          <img
-            src="assets/images/masterhome.jpg"
-            width="270px"
-            height="280px"
-            class="frame-best"
-          />
-        </div>
-        <div class="best">
-          <div class="overlap-group-2">
-            <p class="cube-name">Masterhome</p>
-            <div class="cube-star">3 (20)</div>
-            <img class="star" src="assets/images/star-1.svg" />
-          </div>
-          <div class="cube-hour">$15/day</div>
-        </div>
-      </a>
-    </div>
+<div class="heading-collab">
+  Why Should You Collaborate With Us?
+  <img src="assets/images/host.png" class="host" />
+  <img src="assets/images/tourist.png" class="tourist" />
+  <img src="assets/images/partner.png" class="partner" />
+</div>
 
-    <!--Achievements-->
-    <div class="heading3">Our Achievements</div>
-    <div class="achievement1">
-      <div class="frame-achievement">
-        <img src="assets/images/logovecom.png" width="180px" height="180px" />
-      </div>
-    </div>
-  </div>
-  <div class="achieve-name">Vietnam E-commerce Awards</div>
-  <div class="achieve-price">Double platinum winner</div>
-  <div class="achievement2">
-    <div class="frame-achievement">
-      <img src="assets/images/playstore.webp" width="100px" height="100px" />
-    </div>
-  </div>
-  <div class="overlap-group">
-    <div class="achieve-name2">Google Indonesia Play Store</div>
-  </div>
-  <div class="overlap-2">
-    <p class="achieve-price2">Shortlist, Best Local Apps 2015 &amp; 2016</p>
-  </div>
-  <div class="achievement3">
-    <div class="frame-achievement">
-      <img src="assets/images/warta.webp" width="150px" height="100px" />
-    </div>
-  </div>
-  <div class="achieve-name3">Millennials first choice</div>
-  <div class="achieve-price3">Hotels and Flight bookings category</div>
-
-  <!--Collaborate-->
-  <div class="heading4">Why Should You Collaborate With Us?</div>
-  <div>
-    <img src="assets/images/heart.jpg" width="150px" height="150px" class="why1" />
-  </div>
-  <div>
-    <img src="assets/images/thumbsup.jpg" width="150px" height="150px" class="why2" />
-  </div>
-  <div>
-    <img src="assets/images/hand.jpg" width="150px" height="150px" class="why3" />
-  </div>
-
-  <!--Question-->
-  <div class="heading5">Got any questions?</div>
-  <p class="quote">
+<div class="heading-question"> Got any questions?
+  <div class="statement">
     Couldn't find your business within the categories above? Simply want to have
     a chat with our team? Or would you prefer to send a partnership proposal
     immediately? Send your inquiries to:
-  </p>
+  </div>
   <img class="icon" src="assets/images/icon-envelope.png" />
   <div class="mail">foxhubvn@gmail.com</div>
 </div>
