--- a/src/app/pages/renter/home/components/sign-up-modal/sign-up-modal.component.html
+++ b/src/app/pages/renter/home/components/sign-up-modal/sign-up-modal.component.html
@@ -19,6 +19,8 @@
             <img src="assets/svg/facebook.svg">
             Continue with Facebook
         </button>
+
+        <button type="button" class="btn create-account-button" (click)="gotoSignupPage()">Create new account</button>
     </div>
 </div>
 <div class="modal-footer">
