--- a/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/pages/renter/components/header-nav-bar/header-nav-bar.component.html
@@ -1,5 +1,7 @@
 <div class="navbar-container">
-    <img src="assets/images/logo.jpg">
+    <a [routerLink]="['/renter/home']">
+        <img src="assets/images/logo.jpg">
+    </a>
     <nav class="nav">
         <a class="nav-link" href="#">FoxHub’s Story</a>
         <a class="nav-link" href="#">Reservation</a>
