--- a/src/app/pages/renter/home/components/log-in-modal/log-in-modal.component.html
+++ b/src/app/pages/renter/home/components/log-in-modal/log-in-modal.component.html
@@ -6,17 +6,17 @@
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()"></button>
 </div>
 <div class="modal-body">
-    <form>
+    <form [formGroup]="loginForm" (submit)="onSubmit()">
         <div class="form-input-container">
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="Enter email">
+                <input type="email" class="form-control" placeholder="Enter email" formControlName="email">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password" formControlName="password">
             </div>
             <div class="d-flex justify-content-between">
                 <div class="form-group form-check p">
-                    <input type="checkbox" class="form-check-input" id="remember-me">
+                    <input type="checkbox" class="form-check-input" id="remember-me" formControlName="isRememberMe">
                     <label class="form-check-label" for="remember-me">Remember me</label>
 
                 </div>
